# wasm-birdsim

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json
