[package]
name = "birdsim"
version = "0.1.0"
authors = ["Pierre TRETON <pierre.treton@etudiant.univ-rennes1.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.22"
web-sys = "0.3.70"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
